set DTO from class to record